[gd_scene load_steps=4 format=3 uid="uid://cpvyd1v5t0kpb"]

[ext_resource type="Texture2D" uid="uid://d6je7vib0wgq" path="res://assets/store/mixer_background.png" id="1_5syhe"]
[ext_resource type="Script" uid="uid://b4iaq2v6tep40" path="res://mix_ui.gd" id="1_mk00n"]
[ext_resource type="Texture2D" uid="uid://dn0p5gavyr4gu" path="res://assets/gameplay/racik.png" id="3_f63aa"]

[node name="MixMenu" type="CanvasLayer"]

[node name="MixUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mk00n")

[node name="Panel" type="Panel" parent="MixUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MixUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.13700001
anchor_right = 0.75200003
anchor_bottom = 0.86600006
offset_left = -0.34399414
offset_top = 0.2239914
offset_right = -0.3040161
offset_bottom = -0.16802979
texture = ExtResource("1_5syhe")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MixUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22100002
anchor_top = 0.128
anchor_right = 0.48700002
anchor_bottom = 0.85600007
offset_left = 0.4079895
offset_top = 0.055999756
offset_right = -0.024047852
offset_bottom = 0.31195068
texture = ExtResource("1_5syhe")
expand_mode = 1

[node name="ListContainer" type="GridContainer" parent="MixUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55700004
anchor_top = 0.261
anchor_right = 0.71500003
anchor_bottom = 0.785
offset_left = 0.3359375
offset_top = -0.12800598
offset_right = 0.3199463
offset_bottom = 0.3199768
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 11
columns = 4

[node name="MixBox" type="VBoxContainer" parent="MixUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.256
anchor_top = 0.23500001
anchor_right = 0.45200002
anchor_bottom = 0.75900006
offset_left = 0.08798218
offset_top = -0.28001404
offset_right = 0.29595947
offset_bottom = 21.167969
theme_override_constants/separation = 32
alignment = 1

[node name="Hero" type="VBoxContainer" parent="MixUI/MixBox"]
layout_mode = 2

[node name="namaJamu" type="Label" parent="MixUI/MixBox/Hero"]
layout_mode = 2
theme_override_colors/font_color = Color(0.21568628, 0.16470589, 0.12941177, 1)
text = "Racik Obat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconBox" type="HBoxContainer" parent="MixUI/MixBox/Hero"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="iconJamu" type="TextureRect" parent="MixUI/MixBox/Hero/IconBox"]
layout_mode = 2
texture = ExtResource("3_f63aa")
expand_mode = 2

[node name="Bahan" type="VBoxContainer" parent="MixUI/MixBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MixUI/MixBox/Bahan"]
layout_mode = 2
theme_override_colors/font_color = Color(0.21568628, 0.16078432, 0.1254902, 1)
theme_override_font_sizes/font_size = 12
text = "Masukan Bahan"

[node name="CraftSlots" type="HBoxContainer" parent="MixUI/MixBox/Bahan"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Slot1" type="TextureRect" parent="MixUI/MixBox/Bahan/CraftSlots"]
layout_mode = 2
expand_mode = 2

[node name="Slot2" type="TextureRect" parent="MixUI/MixBox/Bahan/CraftSlots"]
layout_mode = 2
expand_mode = 2

[node name="Slot3" type="TextureRect" parent="MixUI/MixBox/Bahan/CraftSlots"]
layout_mode = 2
expand_mode = 2

[node name="Slot4" type="TextureRect" parent="MixUI/MixBox/Bahan/CraftSlots"]
layout_mode = 2
expand_mode = 2

[node name="ButtonBox" type="HBoxContainer" parent="MixUI/MixBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Reset" type="Button" parent="MixUI/MixBox/ButtonBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
disabled = true
text = "Reset"

[node name="MixButton" type="Button" parent="MixUI/MixBox/ButtonBox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Racik"

[connection signal="pressed" from="MixUI/MixBox/ButtonBox/Reset" to="MixUI" method="_on_reset_pressed"]
[connection signal="pressed" from="MixUI/MixBox/ButtonBox/MixButton" to="MixUI" method="_on_mix_button_pressed"]
